initial basic layout pre-js

--- a/final-code/index.html
+++ b/final-code/index.html
@@ -4,8 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frontend Mentor | Rock, Paper, Scissors</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+   <main>
+       <div class="game-start">
+           <img src="img/bg-triangle.svg" alt="">
+           <div class="rock hand">
+               <img src="img/icon-rock.svg" alt="">
+           </div>
+           <div class="paper hand">
+               <img src="img/icon-paper.svg" alt="">
+           </div>
+           <div class="scissors hand">
+               <img src="img/icon-scissors.svg" alt="">
+           </div>
+        </div>
+        <div class="game-show-hands">
+            <div class="user-hand">
+                <div class="hide-me rock hand played">
+                    <img src="img/icon-rock.svg" alt="">
+                </div>
+                <div class="hide-me paper hand played">
+                    <img src="img/icon-paper.svg" alt="">
+                </div>
+                <div class="hide-me scissors hand played">
+                    <img src="img/icon-scissors.svg" alt="">
+                </div>
+            </div>
+            <div class="computer-hand">
+                <div class="hide-me played-placeholder">
+                </div>
+                <div class="hide-me rock hand played">
+                    <img src="img/icon-rock.svg" alt="">
+                </div>
+                <div class="hide-me paper hand played">
+                    <img src="img/icon-paper.svg" alt="">
+                </div>
+                <div class="hide-me scissors hand played">
+                    <img src="img/icon-scissors.svg" alt="">
+                </div>
+            </div>     
+        </div>
+        <div class="game-result">
+            
+        </div>
+   </main> 
 </body>
 </html>
